# lod1-nmt-merger

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: lod1.gml
